--- a/clima/src/components/Previsao.module.css
+++ b/clima/src/components/Previsao.module.css
@@ -1,34 +1,29 @@
 .previsaoContainer {
-    margin-top: 20px;
-    padding: 15px;
-    background-color: #f7f7f7;
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    margin-top: 16px;
+    background: transparent;
+    color: #ffffff;
 }
 
 .previsaoContainer h4 {
     text-align: center;
-    margin-bottom: 10px;
-    color: #333;
+    margin-bottom: 8px;
+    color: #ffffff;
 }
 
 .previsaoContainer ul {
-    list-style-type: none;
+    list-style: none;
     padding: 0;
+    margin: 0;
 }
 
-.previsaoContainer ul li {
+.previsaoContainer li {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding: 10px;
-    margin-bottom: 5px;
-    background-color: #fff;
-    border-radius: 3px;
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
-    color: #333;
+    gap: 10px;
+    padding: 6px 0;
 }
 
-.previsaoContainer ul li img {
-    margin-right: 10px;
+.previsaoContainer li img {
+    width: 32px;
+    height: 32px;
 }
