--- a/weather-app/src/App.module.css
+++ b/weather-app/src/App.module.css
@@ -11,14 +11,14 @@
     margin-top: 96px;
 }
 
-.titulo {
-    color: #ffffff;
+.title {
+    color: #fff;
     font-size: 2.25rem;
     font-weight: 700;
     margin-bottom: 16px;
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
 }
 
-.bloco {
-    margin-top: 12px;
+.block {
+    margin-top: 14px;
 }
